fixed issue with user management quyery
